@@ -1,3 +1,13 @@
+2006-01-16  Jose Renato Santos  <jsantos@hpl.hp.com>
 
+	* daemon/init.c:
+	* daemon/opd_interface.h:
+	* daemon/opd_kernel.h:
+	* daemon/opd_kernel.c:
+	* daemon/opd_trans.c:
+	* daemon/oprofiled.h:
+	* daemon/oprofiled.c:
+	* doc/opcontrol.1.in:
+	* utils/opcontrol: Added support for Xen
 
 See ChangeLog-2005 for earlier changelogs.
